--- a/public/index.html
+++ b/public/index.html
@@ -2,58 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Current Weather</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>SimpleWeather</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"></head>
 </head>
-<body class="d-flex justify-content-center">
-    <div id="weather">
-        <h1>Simple Forecast</h1>
-        <div id="description"></div>
-        <h1 id="temp"></h1>
-        <div id="location"></div>
-    </div>
-  <script>
-    function askBrowserForLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(getCords);
-        } else {
-            console.error("Geolocation is not supported by this browser.");
-        }
-    }
 
-    function getCords(position) {
-        console.log("Latitude: " + position.coords.latitude +
-        "Longitude: " + position.coords.longitude)
+<body>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                SimpleWeather
+            </a>
+        </div>
+    </nav>
+    <br/>
 
-        getCurrentWeather(position.coords.latitude, position.coords.longitude)        
-    }
+  <script src="./scripts/index.js"></script>
+  <div id="weather" class="container">
+    <div id="currentWeatherContainer"></div>
 
-    function getCurrentWeather(lat, lon) {
-        var key = '061cec208840636a12589da186d087bd';
-        
-        fetch('https://api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon=' + lon + '&appid=' + key)
-        .then(function(resp) { return resp.json()  }) // Convert response to json
-        .then(function(data) {
-            console.log(data);
-            insertWeather(data);
-        })
-        .catch(function() {
-            // Catch any errors
-        })
-    }
+    <br/>
 
-    function insertWeather(d) {
-        var fahrenheit = Math.round(((parseFloat(d.main.temp) - 273.15) * 1.8) + 32); 
-        document.getElementById('description').innerHTML = d.weather[0].description;
-        document.getElementById('temp').innerHTML = fahrenheit + '&deg;';
-        document.getElementById('location').innerHTML = d.name;
-    }
+    <div id="futureWeatherContainer"></div>
+  </div>
 
-    window.onload = function() {
-        askBrowserForLocation();
-
-        //https://api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon=' + lon + '&appid=' + key
-    }
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 </body>
 </html>
