Update navbar color

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar navbar-dark" style="background-color: #24292e;">
     <div class="container-fluid">
       <a class="navbar-brand" id="navbarForLocationDisplay"></a>
     </div>
