--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,25 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark" style="background-color: #24292e;">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #24292e;">
     <div class="container-fluid">
       <a class="navbar-brand" id="navbarForLocationDisplay"></a>
-    </div>
+
+      <!-- Toggle button -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <!-- Search bar in toggle -->
+      <div class="collapse navbar-collapse" id="navbarText">
+        <br/>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="City, State" aria-label="Search">
+          <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+      </div>
+  
+    </div>  
   </nav>
 
   <script src="./scripts/index.js"></script>
@@ -24,5 +39,6 @@
 
     <div id="futureWeatherContainer"></div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
