--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       </script> 
       <div class="collapse navbar-collapse" id="navbarText">
         <br/>
-        <form class="d-flex" role="search">
+        <form class="d-flex ms-auto" role="search">
           <input class="form-control me-2" type="search" placeholder="City, State" aria-label="Search" id="locationSearchInput">
           <button class="btn btn-primary" type="button" 
           onclick="searchLocation(document.getElementById('locationSearchInput').value)">Search
