Add weather alerts

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
 
   <script src="./scripts/index.js" type="module"></script>
   <div id="weather" class="container">
+    <br/>
+    <div id="weatherAlertsContainer"></div>
+
     <div id="currentWeatherContainer"></div>
 
     <br/>
