--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>SimpleWeather</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="9qj3PwCzcmR3oHpfgnsN07mx5Ir2L_WGwtBHriI4v14" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
