Add rain chance graph

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,9 @@
     <br/>
     <div id="weatherAlertsContainer"></div>
 
-    <div id="currentWeatherContainer">
-    </div>
-    <canvas id="hourlyChart" width="400" height="200"></canvas>
+    <div id="currentWeatherContainer"></div>
+    <br/>
+    <canvas id="rainPercentageChart" width="400" height="200"></canvas>
 
 
     <br/>
