Fix the graph time and maximum height

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
 
     <div id="currentWeatherContainer"></div>
     <br/>
-    <canvas id="rainPercentageChart" width="400" height="200"></canvas>
+    <canvas id="rainPercentageChart" style="max-height: 400px"></canvas>
 
 
     <br/>
