--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   
       <!-- Search bar in toggle -->
       <script type="module"> 
-        import {searchLocation} from "./scripts/searchlocation.js"; 
+        import {searchLocation} from "./comp_scripts/searchlocation.js"; 
         window.searchLocation = searchLocation;
       </script> 
       <div class="collapse navbar-collapse" id="navbarText">
@@ -95,7 +95,7 @@
     </div>  
   </nav>
 
-  <script src="./scripts/index.js" type="module"></script>
+  <script src="./comp_scripts/index.js" type="module"></script>
   <script>
     function handleSearch() {
       const cityInput = document.getElementById('cityInput').value;
